--- a/pinyg-manager-web/src/main/webapp/admin/brand.html
+++ b/pinyg-manager-web/src/main/webapp/admin/brand.html
@@ -12,22 +12,56 @@
 	<script src="../plugins/jQuery/jquery-2.2.3.min.js"></script>
     <script src="../plugins/bootstrap/js/bootstrap.min.js"></script>
 	<!-- 引入angularjs-->
-	<script src="../plugins/angularjs/angular.min.js"> </script>
+	<script type="text/javascript" src="../plugins/angularjs/angular.min.js"></script>
+	<!-- 分页组件开始 -->
+	<script src="../plugins/angularjs/pagination.js"></script>
+	<link rel="stylesheet" href="../plugins/angularjs/pagination.css">
 	<script type="text/javascript">
-	    var app=angular.module('pinyg-mananger',[]);
-		app.constructor('brandController',function ($scop,$http) {
-			//查询品牌列表
-			$scop.finAll=function () {
-				$http.get("../brand/findAll.do").success(
-					 function (response) {
-                         $scop.list=response;
-					 }
-				)
-            };
+        var app=angular.module('pinyougou', ['pagination']);//定义模块
+        app.controller('brandController' ,function($scope,$http){
+            //读取列表数据绑定到表单中
+            $scope.findAll=function(){
+                $http.get('../brand/findAll.do').success(
+                    function(response){
+                        $scope.list=response;
+                    }
+                );
+            }
+            //分页控间配置
+            $scope.paginationConf= {
+                currentPage: 1,
+                totalItems: 10,
+                itemsPerPage: 10,
+                perPageOptions: [10, 20, 30, 40, 50],
+                onChange: function () {
+                    $scope.reloadList();//重新加载
+                }
+            }
+            $scope.reloadList = function(){
+                //切换页码
+                $scope.findPage( $scope.paginationConf.currentPage, $scope.paginationConf.itemsPerPage);
+            }
+            //分页
+            $scope.findPage = function(page,rows) {
+                $http.get('../brand/findPage.do?page='+page+'&rows='+rows).success(
+                    function (response) {
+                        $scope.list=response.rows;
+                        //更新总记录数
+                        $scope.paginationConf.totalItems=response.total;
+                    }
+
+                )
+            }
+
         });
+
+
+
+
+
 	</script>
 </head>
-<body class="hold-transition skin-red sidebar-mini" ng-app="pinyg-maganger" ng-controller="brandController" ng-init="findAll()" >
+<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou"   ng-controller="brandController">
   <!-- .box-body -->
                     <div class="box-header with-border">
                         <h3 class="box-title">品牌管理</h3>
@@ -70,18 +104,18 @@
 			                      </thead>
 			                      <tbody>
 			                          <tr ng-repeat="entity in list">
-			                              <td><input  type="checkbox" ></td>			                              
-				                          <td>{{entity.id}}</td>
-									      <td>{{entity.name}}</td>
-		                                  <td>{{entity.firstChar}}</td>
+			                              <td><input  type="checkbox" ></td>
+										  <td>{{entity.id}}</td>
+										  <td>{{entity.name}}</td>
+										  <td>{{entity.firstChar}}</td>
 		                                  <td class="text-center">                                           
 		                                 	  <button type="button" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#editModal"  >修改</button>                                           
 		                                  </td>
 			                          </tr>
 			                      </tbody>
 			                  </table>
-			                  <!--数据列表/-->                        
-							  
+			                  <!--数据列表/-->
+							<tm-pagination conf="paginationConf"></tm-pagination>
 							 
                         </div>
                         <!-- 数据表格 /-->
