--- a/pinyg-manager-web/src/main/webapp/admin/item_cat.html
+++ b/pinyg-manager-web/src/main/webapp/admin/item_cat.html
@@ -36,13 +36,13 @@
                     <div class="box-body">
                   			 <ol class="breadcrumb">	                        	
                         		<li>
-		                        	<a href="#" ng-click="setGrade(1);selectList({id:0})" >顶级分类列表</a>
+		                        	<a href="#" ng-click="grade=1;selectList({id:0})" >顶级分类列表</a>
 		                        </li>
 		                        <li>
-		                       		<a href="#"  ng-click="setGrade(1);selectList(entity_1)"  >{{entity_1.name}}</a>
+		                       		<a href="#"  ng-click="grade=2;selectList(entity_1)"  >{{entity_1.name}}</a>
 		                        </li>
 		                        <li>
-		                        	<a href="#" ng-click="setGrade(1);selectList(entity_2)"> {{entity_2.name}}</a>
+		                        	<a href="#" ng-click="grade=3;selectList(entity_2)"> {{entity_2.name}}</a>
 		                        </li>
 	                        </ol>
 
@@ -88,7 +88,6 @@
 
 											  <span ng-if="grade!=3">
 												  <button type="button" class="btn bg-olive btn-xs" ng-click="setGrade(grade+1); selectList(entity)" >查询下级</button>
-
 											  </span>
 		                                 	  <button type="button" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#editModal" >修改</button>
 		                                  </td>
